--- a/Documentazione/Iterazione0/Cap.tex
+++ b/Documentazione/Iterazione0/Cap.tex
@@ -52,6 +52,7 @@ Di seguito sono riportati alcuni casi d'uso principali:
         UC1 & Login\\ \hline
         UC2 & Registrazione \\ \hline
         UC3 & Logout \\ \hline
+        UC7 & Crea gruppo \\ \hline
         UC8 & Invita memebri \\ \hline
         UC9 & Elimina membri \\ \hline
         UC10 & Modica memebri \\ \hline
