--- a/Documentazione/Iterazione0/ToolChain.tex
+++ b/Documentazione/Iterazione0/ToolChain.tex
@@ -17,15 +17,11 @@ Lo sviluppo del progetto è supportato da una serie di strumenti software che fa
 
     \item \textbf{Grok AI}: Tecnologia avanzata per la generazione automatica di immagini basata su intelligenza artificiale. Grok AI viene utilizzato per creare rappresentazioni visive intuitive e schematiche di concetti complessi, supportando la documentazione e la comunicazione grafica del progetto.
 
-    \item \textbf{JAutoDoc}: Plugin per la generazione automatica della documentazione Javadoc a partire dai commenti presenti nel codice sorgente. Questo strumento semplifica la creazione di documentazione chiara e dettagliata per ogni componente del sistema.
-
     \item \textbf{JUnit 4}: Framework per il testing unitario in Java, impiegato per validare il corretto funzionamento delle classi e dei metodi sviluppati. L’uso di test automatizzati consente di rilevare tempestivamente eventuali errori e di garantire la robustezza del codice.
-
-    \item \textbf{EclEmma}: Plugin per la misurazione della copertura del codice nei test unitari. Fornisce statistiche dettagliate che permettono di individuare porzioni di codice non coperte dai test, migliorando così la qualità complessiva del software.
 
     \item \textbf{JGraphT}: Libreria Java dedicata alla modellazione e alla gestione di strutture dati basate su grafi. Utilizzata per la rappresentazione e la manipolazione di relazioni complesse all’interno del sistema.
 
-    \item \textbf{STAN4J}: Software per l'analisi statica del codice Java, impiegato per individuare problemi di progettazione, dipendenze indesiderate e violazioni dei principi di modularità.
+    \item \textbf{CodeMR}: Strumento avanzato per l’analisi della qualità del codice Java e la visualizzazione delle metriche software. CodeMR consente di valutare la complessità del codice, individuare problemi di design e migliorare la manutenibilità del progetto.
 
     \item \textbf{GitHub}: Piattaforma per il versionamento del codice basata su Git, utilizzata per il controllo delle versioni e la collaborazione tra gli sviluppatori. Grazie a GitHub, è possibile tracciare le modifiche al codice, gestire le revisioni e garantire un workflow ordinato ed efficiente. 
 
@@ -36,5 +32,7 @@ Lo sviluppo del progetto è supportato da una serie di strumenti software che fa
     \item \textbf{diagrams.net}: Applicazione web per la creazione di diagrammi e schemi con notazione libera. Utilizzata per rappresentare graficamente flussi di dati, processi e architetture software, facilitando la comprensione e la condivisione delle informazioni progettuali.
 
     \item \textbf{WhatsApp}: Applicazione di messaggistica utilizzata come strumento di comunicazione interna tra i membri del team. Attraverso WhatsApp, è possibile coordinare le attività di sviluppo, discutere problemi tecnici e organizzare riunioni in tempo reale, garantendo un flusso comunicativo rapido ed efficiente.
+
+    \item \textbf{Telegram}: Applicazione di messaggistica utilizzata dal team per discussioni tecniche e condivisione rapida di documenti, codice e aggiornamenti di progetto. Grazie ai suoi bot e alle funzionalità avanzate di gestione dei gruppi, Telegram rappresenta uno strumento utile per il coordinamento del lavoro.
 
 \end{itemize}
