--- a/Documentazione/Iterazione1/CasiUsoImplementati.tex
+++ b/Documentazione/Iterazione1/CasiUsoImplementati.tex
@@ -2,6 +2,24 @@
 
 In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prioritari per lo sviluppo di \textbf{Spendly}.
 
+\begin{table}[h]
+    \centering
+    \begin{tabular}{|c|l|}
+    \hline
+    \textbf{ID} & \textbf{Titolo} \\ \hline
+    UC1 & Login\\ \hline
+    UC2 & Registrazione \\ \hline
+    UC3 & Logout \\ \hline
+    UC7 & Crea gruppo \\ \hline
+    UC8 & Invita memebri \\ \hline
+    UC9 & Elimina membri \\ \hline
+    UC10 & Modica memebri \\ \hline
+    UC11 & Elimina gruppo \\ \hline
+    UC12 & Accedi gruppo \\ \hline
+    \end{tabular}
+    \caption{Iterazione1}
+\end{table}
+
 \subsubsection{UC1: Login}
 \textbf{Attori}: Utente, Sistema.
 
