--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -1,4 +1,5 @@
-\documentclass{softwaredoc}
+\documentclass[12pt]{article}   %Prima era \documentclass{softwaredocumetation}
+
 
 % Impostazioni di codifica e lingua
 \usepackage[utf8]{inputenc}
@@ -70,8 +71,8 @@ Questa sezione analizza i requisiti iniziali del progetto Spendly.
 \input{Iterazione0/CasiDuso.tex}
 \input{Iterazione0/Architettura.tex}
 \input{Iterazione0/priorità.tex}
-\newpage
-\input{Iterazione0/Topologia.tex}
+%\newpage
+%\input{Iterazione0/Topologia.tex}
 \newpage
 \input{Iterazione0/ToolChain.tex}
 
@@ -87,5 +88,16 @@ In questa iterazione, ci concentriamo sul design e sull'implementazione iniziale
 \input{Iterazione1/ComponentDiagram.tex}
 \newpage
 \input{Iterazione1/DiagrammiClassiTipoDati.tex}
+\newpage
+\input{Iterazione1/Test.tex}
+
+% =======================================================
+% ITERAZIONE 2
+% =======================================================
+\newpage
+\section{Iterazione 2}
+\input{Iterazione2/CasiUsoImpl.tex}
+\newpage
+
 
 \end{document}
