--- a/Documentazione/Iterazione0/CasiDuso.tex
+++ b/Documentazione/Iterazione0/CasiDuso.tex
@@ -6,7 +6,7 @@
         \caption{Diagramma casi d'uso }
     \end{figure}
 
-Di seguito sono riportati alcuni casi d'uso principali:
+Di seguito sono riportati i casi d'uso in figura:
 \begin{itemize}
     \item \textbf{UC1 - Login}: Come utente, voglio poter accedere al mio account per gestire le mie spese.
     \item \textbf{UC2 - Registrazione}: Come nuovo utente, voglio potermi registrare al sistema per iniziare a usare la web-app.
