--- a/Documentazione/Iterazione0/Introduzione.tex
+++ b/Documentazione/Iterazione0/Introduzione.tex
@@ -13,9 +13,9 @@ A livello individuale, ogni utente può:
     \item Visualizzare, registrare e gestire le proprie spese in modo autonomo.
     \item Creare e monitorare un budget di risparmio per pianificare meglio le proprie finanze personali.
 \end{itemize}
-
 Grazie a queste funzionalità, Spendly rende la gestione economica più semplice, trasparente ed efficace, sia per singoli utenti che per gruppi.
-
+\newline
+\newline
 \textbf{Perché scegliere Spendly?}
 \\
 \\
