--- a/Documentazione/Iterazione0/priorità.tex
+++ b/Documentazione/Iterazione0/priorità.tex
@@ -11,7 +11,7 @@
         Contiene le funzionalità meno rilevanti ossia la tematica del budget , per le quali non è prevista una loro implementazione immediata. Tuttavia, potrebbero essere implementate in futuro, a seconda dell'andamento del progetto.
     \end{itemize}
 
-    \begin{table}[h!]
+    \begin{table}[H]
         \centering
         \begin{tabular}{|c|l|}
         \hline
@@ -33,7 +33,7 @@
         \caption{Coda alta priorità}
     \end{table}
 
-    \begin{table}[h!]
+    \begin{table}[H]
         \centering
         \begin{tabular}{|c|l|}
         \hline
@@ -49,7 +49,7 @@
         \caption{Coda media priorità}
     \end{table}
 
-    \begin{table}[h!]
+    \begin{table}[H]
         \centering
         \begin{tabular}{|c|l|}
         \hline
@@ -61,3 +61,17 @@
         \end{tabular}
         \caption{Coda bassa priorità}
     \end{table}
+\textbf{Perché si dividono in code di priorità i casi d'uso?}
+\\
+\\
+In quanto lo sviluppo del progetto viene sviluppato tramite il processo Agile Model-Driven Developmen.
+\\
+AMDD combina i principi della modellazione guidata dallo sviluppo con la flessibilità dei metodi agili, che a differenza dello sviluppo tradizionale, in cui tutta l’analisi viene completata prima di iniziare la programmazione, prevede una modellazione iniziale leggera e iterativa, concentrata solo sugli aspetti essenziali per l’iterazione corrente.
+\newline
+Ad ogni ciclo di sviluppo, il team seleziona un numero limitato di casi d’uso dalla coda di priorità più alta, lavorando su di essi fino a ottenere una funzionalità completa e testata. Questo approccio:
+\begin{itemize}
+    \item Riduce il rischio affrontando le funzionalità critiche prima possibile.
+    \item Favorisce il feedback continuo, permettendo agli stakeholder di validare il progresso e suggerire miglioramenti.
+    \item Adatta lo sviluppo alle necessità reali, permettendo di rivalutare le priorità in base all’andamento del progetto.
+\end{itemize}
+Grazie a questo metodo, il sistema viene costruito in modo solido e incrementale, con la possibilità di aggiungere nuove funzionalità man mano che il progetto evolve.
