--- a/Documentazione/Iterazione1/CasiUsoImplementati.tex
+++ b/Documentazione/Iterazione1/CasiUsoImplementati.tex
@@ -2,7 +2,7 @@
 
 In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prioritari per lo sviluppo di \textbf{Spendly}.
 
-\begin{table}[h]
+\begin{table}[H]
     \centering
     \begin{tabular}{|c|l|}
     \hline
@@ -22,9 +22,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC1: Login}
 \textbf{Attori}: Utente, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L'utente può autenticarsi nel sistema per accedere al proprio account.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L'utente accede alla pagina di login.
@@ -35,9 +37,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC2: Registrazione}
 \textbf{Attori}: Utente, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: Un nuovo utente può registrarsi creando un account.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L'utente accede alla pagina di registrazione.
@@ -49,9 +53,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC3: Logout}
 \textbf{Attori}: Utente, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L'utente può terminare la sessione ed effettuare il logout.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L'utente clicca su "Logout".
@@ -60,9 +66,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC7: Creazione Gruppo}
 \textbf{Attori}: Utente amministratore, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L’utente può creare un nuovo gruppo di spese per la condivisione con altri membri.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L’utente clicca su "Crea Gruppo".
@@ -73,9 +81,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC8: Invita Membri}
 \textbf{Attori}: Utente amministratore, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L’amministratore di un gruppo può invitare altri utenti a unirsi al gruppo di spese.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L’amministratore accede alla pagina del gruppo.
@@ -86,9 +96,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC9: Elimina Membri}
 \textbf{Attori}: Utente amministratore, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L’amministratore di un gruppo può rimuovere un membro dal gruppo.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L’amministratore accede alla lista dei membri del gruppo.
@@ -98,9 +110,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC10: Modifica Membri}
 \textbf{Attori}: Utente amministratore, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L’amministratore di un gruppo può modificare i dettagli dei membri (ad esempio assegnare nuovi ruoli).
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L’amministratore accede alla lista dei membri.
@@ -110,9 +124,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC11: Eliminazione Gruppo}
 \textbf{Attori}: Utente amministratore, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: L’amministratore di un gruppo può eliminare definitivamente un gruppo di spese.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L’amministratore accede alle impostazioni del gruppo.
@@ -123,9 +139,11 @@ In questa iterazione sono stati sviluppati i seguenti casi d’uso ritenuti prio
 
 \subsubsection{UC12: Accesso a un Gruppo}
 \textbf{Attori}: Utente, Sistema.
-
+\\
+\\
 \textbf{Descrizione}: Un utente può accedere a un gruppo di spese a cui è stato invitato.
-
+\\
+\\
 \textbf{Flusso degli eventi}:
 \begin{enumerate}
     \item L'utente riceve un invito via email o notifica nell’app.
