--- a/Documentazione/Iterazione1/Test.tex
+++ b/Documentazione/Iterazione1/Test.tex
@@ -35,7 +35,7 @@ Questa sezione documenta le API principali del sistema \textbf{Spendly}, include
     \end{itemize}
     \item \textbf{Risultato:}
 \end{itemize}
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{images/registerapi.png}
     \caption{Risultato API Registrazione}
@@ -53,7 +53,7 @@ Questa sezione documenta le API principali del sistema \textbf{Spendly}, include
     \end{itemize}
     \item \textbf{Risultato:}  
 \end{itemize}
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.9\textwidth]{images/loginapi.png}
     \caption{Risultato API Login}
@@ -72,7 +72,7 @@ Questa sezione documenta le API principali del sistema \textbf{Spendly}, include
     \end{itemize}
     \item \textbf{Risultato:}
 \end{itemize}
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/registerapi.png}
     \caption{Risultato API Creazione Gruppo}
@@ -89,7 +89,7 @@ Questa sezione documenta le API principali del sistema \textbf{Spendly}, include
     \end{itemize}
     \item \textbf{Risultato:}
 \end{itemize}
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/registerapi.png}
     \caption{Risultato API Eliminazione Gruppo}
@@ -106,7 +106,7 @@ Questa sezione documenta le API principali del sistema \textbf{Spendly}, include
     \end{itemize}
     \item \textbf{Risultato:}
 \end{itemize}
-\begin{figure}[h!]
+\begin{figure}[H]
     \centering
     \includegraphics[width=0.8\textwidth]{images/registerapi.png}
     \caption{Risultato API Visualizzazione Gruppi}
