--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -1,5 +1,6 @@
 \documentclass[12pt]{article}   %Prima era \documentclass{softwaredocumetation}
 
+\usepackage{float} % Metti questa riga nel preambolo per utilizzare H immagine e tabelle
 
 % Impostazioni di codifica e lingua
 \usepackage[utf8]{inputenc}
@@ -62,7 +63,7 @@
 % ITERAZIONE 0
 % =======================================================
 \section{Iterazione 0}
-Questa sezione analizza i requisiti iniziali del progetto Spendly.
+
 
 \input{Iterazione0/Introduzione.tex}
 \newpage
@@ -81,7 +82,6 @@ Questa sezione analizza i requisiti iniziali del progetto Spendly.
 % =======================================================
 \newpage
 \section{Iterazione 1}
-In questa iterazione, ci concentriamo sul design e sull'implementazione iniziale del sistema.
 
 \input{Iterazione1/CasiUsoImplementati.tex}
 \newpage
