Aggiunti Grafici CodeMR

--- a/Documentazione/Iterazione1/Test.tex
+++ b/Documentazione/Iterazione1/Test.tex
@@ -10,6 +10,10 @@ L'analisi statica del codice è stata gestita tramite il tool CodeMR.
     \label{fig:CodeMR_1}
 \end{figure}
 
+Dall'analisi dell'immagine si può notare che i livelli di coupling e complexity sono tendelzialmente bassi.
+Per quanto riguarda il coupling, solo le classi SecurityConfig e AccountController presentano dei valori medio-alti. 
+Invece, per la complessità l'unica classe con un valore elevato è la ResourceNotFoundException.
+
 \begin{figure}[H]
     \centering
     \includegraphics[width=0.6\textwidth]{images/CodeMR_graph2.png}
