--- a/Documentazione/Iterazione2/ComponentDiagram.tex
+++ b/Documentazione/Iterazione2/ComponentDiagram.tex
@@ -1,13 +1,12 @@
 \subsection{UML Component Diagram}
 
-
 \begin{center}
-    \includegraphics[scale=0.45]{images/ComponentDiagramV1.2.png}
-
+    \includegraphics[scale=0.45]{images/ComponentDiagramV1.3.png}
 \end{center}
 
+In questa iterazione, aggiorniamo il diagramma dei componenti rispetto all'iterazione 1 data l'introduzione dei costi. 
 Partendo dai casi d’uso selezionati per questa iterazione e procedendo con l’utilizzo delle euristiche di design, è stato possibile progettare l’architettura software del sistema \textbf{Spendly}.  
-I componenti sono organizzati secondo il pattern \textbf{MVC (Model-View-Controller)}, con la suddivisione in:
+I componenti sono sempre organizzati secondo il pattern \textbf{MVC (Model-View-Controller)}, con la suddivisione in:
 \begin{itemize}
     \item \textbf{Boundary} - Interfaccia utente, responsabile dell'interazione con l'utente finale.
     \item \textbf{Controller} - Gestione logica di business.
