--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -97,7 +97,8 @@
 \newpage
 \section{Iterazione 2}
 \input{Iterazione2/CasiUsoImpl.tex}
-\input{Ite}
+\newpage
+\input{Iterazione2/ComponentDiagram.tex}
 \newpage
 \input{Iterazione2/DiagrammaClassi.tex}
 \newpage
