--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -73,7 +73,7 @@
 \input{Iterazione0/Architettura.tex}
 \input{Iterazione0/priorità.tex}
 %\newpage
-%\input{Iterazione0/Topologia.tex}
+\input{Iterazione0/Topologia.tex}
 \newpage
 \input{Iterazione0/ToolChain.tex}
 
