Aggiunta Algoritmo Documentazione

--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -8,6 +8,7 @@
 
 % Pacchetti per la grafica
 \usepackage{graphicx}
+\usepackage{listings}
 
 % Pacchetto per l'immagine di sfondo (che verrà applicata a tutte le pagine)
 \usepackage{background}
@@ -101,5 +102,7 @@
 \input{Iterazione2/DiagrammaClassi.tex}
 \newpage
 \input{Iterazione2/Test2.tex}
+\newpage
+\input{Iterazione2/Algoritmo.tex}
 
 \end{document}
