RISPARMIO implementation and Documentation Update

--- a/Documentazione/Iterazione0/CasiDuso.tex
+++ b/Documentazione/Iterazione0/CasiDuso.tex
@@ -2,7 +2,7 @@
 
     \begin{figure}[h]
         \centering
-        \includegraphics[scale=0.6]{images/casousoprova.png}
+        \includegraphics[scale=0.4]{images/DiagrammaCasiDusoV1.png}
         \caption{Diagramma casi d'uso }
     \end{figure}
 
@@ -29,8 +29,7 @@ Di seguito sono riportati i casi d'uso in figura:
     \item \textbf{UC19 - Elimina spesa personale}: Voglio poter eliminare una spesa personali.
     \item \textbf{UC20 - Modifica spesa personale}: Voglio poter modificare una spesa personali.
     \item \textbf{UC21 - Visualizza spesa personale}: Voglio poter visualizzare le spesa personali.
-    \item \textbf{UC22 - Inserisci budget}: Voglio poter inserire un budget di risparmio.
-    \item \textbf{UC23 - Elimina budget}: Voglio poter eliminare un budget di risparmio.
-    \item \textbf{UC24 - Modifica budget}: Voglio poter modificare un budget di risparmio.
+    \item \textbf{UC22 - Aggiungi denaro a budget}: Voglio poter inserire un budget di risparmio.
+    \item \textbf{UC23 - Togli denaro da budget}: Voglio poter eliminare un budget di risparmio.
     \item \textbf{UC25 - Visualizza budget}: Voglio poter visualizzare i budget di risparmio.
 \end{itemize}
