--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -105,4 +105,17 @@
 \newpage
 \input{Iterazione2/Algoritmo.tex}
 
+% =======================================================
+% ITERAZIONE 3
+% =======================================================
+\newpage
+\section{Iterazione 3}
+\input{Iterazione3/CasiDuso.tex}
+\newpage
+\input{Iterazione3/CasiUsoImpl.tex}
+\newpage
+\input{Iterazione3/ComponentDiagram.tex}
+\newpage
+
+
 \end{document}
