--- a/Documentazione/Iterazione3/CasiDuso.tex
+++ b/Documentazione/Iterazione3/CasiDuso.tex
@@ -2,7 +2,6 @@
 
     \begin{figure}[h]
         \centering
-        \includegraphics[scale=0.35]{images/DiagrammaCasiDusoV2.png}
-        \caption{Diagramma dei casi d'uso aggiornato per riflettere i ripensamenti relativi alla gestione delle spese e del budget.}
+        \includegraphics[scale=0.3]{images/DiagrammaCasiDusoV2.png}
+        \caption{Diagramma dei casi d'uso aggiornato per riflettere l'integrazione relativa alla gestione del risparmio.}
     \end{figure}
-    \textit{Nota: Nella presente iterazione sono state apportate modifiche al diagramma iniziale al fine di integrare considerazioni supplementari relative alla gestione delle spese e del budget.}
