--- a/Documentazione/Iterazione3/ComponentDiagram.tex
+++ b/Documentazione/Iterazione3/ComponentDiagram.tex
@@ -4,6 +4,4 @@
     \includegraphics[scale=0.4]{images/ComponentDiagramV1.4.png}
 \end{center}
 
-In questa iterazione, aggiorniamo il diagramma dei componenti rispetto all'iterazione 1 data l'introduzione dei costi personali, budget personale e risparmi personali. 
-Partendo dai casi d’uso selezionati per questa iterazione e procedendo con l’utilizzo delle euristiche di design, è stato possibile progettare l’architettura software del sistema \textbf{Spendly}.  
-
+In questa iterazione, aggiorniamo l'UML Component Diagram aggiungendo i componenti relativi alla gestione del Budget e del Risparmio. 
