--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -110,6 +110,7 @@
 % =======================================================
 \newpage
 \section{Iterazione 3}
+\input{Iterazione3/Introduzione.tex}
 \input{Iterazione3/CasiDuso.tex}
 \newpage
 \input{Iterazione3/CasiUsoImpl.tex}
