--- a/Documentazione/Iterazione2/Test2.tex
+++ b/Documentazione/Iterazione2/Test2.tex
@@ -1,19 +1,38 @@
 \subsection{Testing}
-\subsubsection{Analisi Statica - CodMR}
+\subsubsection{Analisi Statica - CodeMR}
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet arcu quis purus porttitor ullamcorper. Nullam eget tincidunt ligula. Nulla facilisi. Phasellus vehicula, quam ac auctor pharetra, augue justo gravida velit, at tristique urna ligula a felis. Vestibulum fermentum vehicula turpis, ut sagittis dolor pharetra in. Suspendisse potenti. Duis non felis eget erat volutpat consequat. Curabitur a enim nec eros fermentum interdum a vel dui. 
+\begin{figure}[H]
+    \centering
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/Complexity_iter2.png}
+        \caption{Complexity}
+        \label{fig:Complexity_iterazione2}
+    \end{minipage}
+    \hfill
+    \begin{minipage}{0.45\textwidth}
+        \centering
+        \includegraphics[width=\textwidth]{images/Coupling_iter2.png}
+        \caption{Coupling}
+        \label{fig:Coupling_iterazione2}
+    \end{minipage}
+\end{figure}
 
-Vivamus scelerisque varius massa, eget tristique risus pellentesque ac. Integer vitae dolor id quam suscipit scelerisque non in eros. Maecenas id felis eget ligula vestibulum condimentum. Ut in tellus eget metus suscipit gravida. In faucibus arcu eget libero laoreet, non eleifend tortor maximus. Aenean vitae purus et velit eleifend venenatis. Quisque nec metus a arcu tincidunt ultricies. Morbi sit amet felis auctor, consequat erat id, ultricies sapien. 
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.9\textwidth]{images/Problem_iter2.png}
+    \caption{Problemi classi}
+    \label{fig:Problemi_iterazione2}
+\end{figure}
 
-Curabitur tristique neque at mauris auctor, sit amet vehicula arcu tincidunt. Integer ac bibendum lectus. Phasellus eu orci at lorem scelerisque tempor sed vel leo. Nullam elementum vel tortor a tempus. Aliquam erat volutpat. Pellentesque in consectetur justo. Donec id leo neque. Duis scelerisque pharetr
 
 
-\subsubsection{Analisi Dinamica - JUnit}
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet arcu quis purus porttitor ullamcorper. Nullam eget tincidunt ligula. Nulla facilisi. Phasellus vehicula, quam ac auctor pharetra, augue justo gravida velit, at tristique urna ligula a felis. Vestibulum fermentum vehicula turpis, ut sagittis dolor pharetra in. Suspendisse potenti. Duis non felis eget erat volutpat consequat. Curabitur a enim nec eros fermentum interdum a vel dui. 
-
-Vivamus scelerisque varius massa, eget tristique risus pellentesque ac. Integer vitae dolor id quam suscipit scelerisque non in eros. Maecenas id felis eget ligula vestibulum condimentum. Ut in tellus eget metus suscipit gravida. In faucibus arcu eget libero laoreet, non eleifend tortor maximus. Aenean vitae purus et velit eleifend venenatis. Quisque nec metus a arcu tincidunt ultricies. Morbi sit amet felis auctor, consequat erat id, ultricies sapien. 
-
-Curabitur tristique neque at mauris auctor, sit amet vehicula arcu tincidunt. Integer ac bibendum lectus. Phasellus eu orci at lorem scelerisque tempor sed vel leo. Nullam elementum vel tortor a tempus. Aliquam erat volutpat. Pellentesque in consectetur justo. Donec id leo neque. Duis scelerisque pharetr
+\begin{figure}[H]
+    \centering
+    \includegraphics[width=0.6\textwidth]{images/Package_iter2.png}
+    \caption{Struttura dei package}
+    \label{fig:Package_iterazione2}
+\end{figure}
 
 \subsubsection{API Costi}
 
