--- a/Documentazione/Iterazione0/Topologia.tex
+++ b/Documentazione/Iterazione0/Topologia.tex
@@ -3,22 +3,30 @@
 La topologia del sistema è rappresentata nel seguente schema:
 
 \begin{figure}[h]
-    \centering
-    \includegraphics[scale=0.18]{images/topologia.jpg}
-    \caption{Diagramma dell'architettura della webapp}
+\centering
+\includegraphics[scale=0.75]{images/topologia.png}
+\caption{Diagramma dell’architettura della webapp Spendly}
 \end{figure}
 
-Il sistema è basato su un'architettura \textbf{Client-Server} in cui i client interagiscono con un \textbf{web server} sviluppato con il framework \textbf{Spring Boot}. I client possono essere:
+
+Il sistema è basato su un’architettura \textbf{Client-Server}, in cui i client interagiscono con un \textbf{web server} sviluppato utilizzando il framework \textbf{Spring Boot}. I client possono essere:
 
 \begin{itemize}
-    \item \textbf{Applicazione Web}: gli utenti accedono alla webapp tramite un browser, comunicando con il server attraverso \textbf{API REST/HTTP}.
-    \item \textbf{Applicazione Mobile}: gli utenti possono interagire con il sistema tramite un'app mobile che utilizza \textbf{REST/HTTP} per le richieste e \textbf{SMTP/POP3} per le notifiche via email.
+\item \textbf{Applicazione Web}: gli utenti accedono a Spendly tramite un browser, comunicando con il server attraverso \textbf{API REST/HTTP}.
+\item \textbf{Applicazione Mobile}: gli utenti interagiscono con il sistema tramite un’app mobile che utilizza \textbf{REST/HTTP} per le richieste e \textbf{SMTP} per le notifiche via email.
 \end{itemize}
 
-Il web server, sviluppato con \textbf{Spring Boot}, gestisce le richieste provenienti dai client e si interfaccia con un database \textbf{PostgreSQL} tramite il \textbf{protocollo PostgreSQL}, garantendo la persistenza dei dati.
+
+Il \textbf{web server}, sviluppato con \textbf{Spring Boot}, gestisce le richieste dei client e include al suo interno il database \textbf{PostgreSQL}, che garantisce la persistenza e la gestione efficiente dei dati. Questa integrazione semplifica la gestione delle risorse e riduce la latenza nelle operazioni di lettura e scrittura.
 
 \subsubsection{Gestione delle comunicazioni}
-Il sistema sfrutta il protocollo \textbf{REST/HTTP} per lo scambio di dati in formato \textbf{JSON}, garantendo interoperabilità con diverse piattaforme. Inoltre, per le notifiche agli utenti, viene utilizzato il protocollo \textbf{SMTP/POP3}.
+Il sistema utilizza il protocollo \textbf{REST/HTTP} per lo scambio di dati in formato \textbf{JSON}, assicurando l’interoperabilità tra diverse piattaforme. Per l’invio delle notifiche agli utenti, viene impiegato il protocollo \textbf{SMTP}.
 
-\subsubsection{Architettura a Microservizi}
-L'architettura del sistema segue il paradigma dei \textbf{microservizi}, in cui ogni funzionalità del web server è implementata come un servizio indipendente. Questo approccio consente maggiore scalabilità, modularità e manutenibilità del sistema.
+\subsubsection{Caratteristiche dell’architettura}
+
+\begin{itemize}
+\item \textbf{Scalabilità}: possibilità di scalare l’intero sistema o le singole funzionalità in base alle necessità.
+\item \textbf{Modularità}: sviluppo e manutenzione semplificati grazie all’organizzazione delle funzionalità in moduli indipendenti.
+\item \textbf{Affidabilità}: eventuali malfunzionamenti in una funzionalità non compromettono l’intero sistema.
+\item \textbf{Manutenibilità}: possibilità di aggiornare o sostituire singoli moduli senza interrompere l’operatività complessiva.
+\end{itemize}
