--- a/Documentazione/Prova.tex
+++ b/Documentazione/Prova.tex
@@ -129,6 +129,8 @@
 \input{Iterazione3/ComponentDiagram.tex}
 \newpage
 \input{Iterazione3/DeploymentDiagram.tex}
+\newpage
+\input{Iterazione3/Test3.tex}
 
 
 \end{document}
